MNT-17551 fixed styling for rule word wrapping (#111)
* MNT-17551 fixed styling for rule word wrapping

* small change to commit support for IE11

--- a/share/src/main/webapp/components/rules/rule-details.css
+++ b/share/src/main/webapp/components/rules/rule-details.css
@@ -11,6 +11,7 @@
 .rule-details h2
 {
    padding-bottom: 0.5em;
+   word-wrap: break-word;    
 }
 
 .rule-details hr
